# Clout

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: Build-and-Pack.yml  cmake-single-platform.yml
res/: fshader.glsl
src/: CMakeLists.txt  Clout.cpp  Clout.h  Clout.sln  Clout.vcxproj  Clout.vcxproj.filters  CloutProgram.cpp  CloutProgram.h  CloutScript.cpp  CloutScript.h  Comms.cpp  Comms.h  Console.cpp  Console.h  FileTransfer.cpp  FileTransfer.h  Helpers.cpp  Helpers.h  ImGuiFileDialogConfig.h  Main.cpp  ModelViewer.cpp  ModelViewer.h  OperationQueue.cpp  OperationQueue.h  Probing.cpp  Probing.h  ProgramEditor.cpp  ProgramEditor.h  ScriptEditor.cpp  ScriptEditor.h  winmain.cpp
src/Operations/: ATCToolChange.cpp  CloseCollet.cpp  CustomGCode.cpp  HomeXY.cpp  InstallTouchProbe.cpp  OpenCollet.cpp  ProbeOp.cpp  RapidTo.cpp  RunGCodeFile.cpp
src/Probing/: BoreCenter.cpp  BossCenter.cpp  PocketCenter.cpp  Probing.cpp  Probing.h  SingleAxis.cpp  WebCenter.cpp
src/Resources/: ProbeBore.h  ProbeBoss.h  ProbePocketX.h  ProbePocketY.h  ProbeSingleAxisX0.h  ProbeSingleAxisX1.h  ProbeSingleAxisY2.h  ProbeSingleAxisY3.h  ProbeSingleAxisZ4.h  ProbeWebX.h  ProbeWebY.h  ProggyClean.h  modelCarveraBed.h  modelCarveraCarriage.h  modelCarveraSpindle.h  modelEndMill.h  shaderMainF.h  shaderMainV.h  shaderShadowMapViewerF.h  shaderShadowMapViewerV.h  shaderShadowV.h
src/Resources/src/: binary_to_compressed_c.txt  modelCarveraBed.3mf  modelCarveraBody.3mf  modelCarveraCarriage.3mf  modelCarveraSpindle.3mf  modelEndMill.3mf
